--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 body {
-  background: #444444;
-  color: #dddddd;
+  background-image: url("https://dpuk71x9wlmkf.cloudfront.net/assets/2018/10/31202233/07-02.png");
   font-family: Arial, Helvetica, sans-serif;
   margin: 10% 20%;
+}
+
+p, h1, h3, h4, h5, h6, ul, li {
+  color: pink
+}
+
+.contact-info {
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .exp-header {
