--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
   background-image: url("https://dpuk71x9wlmkf.cloudfront.net/assets/2018/10/31202233/07-02.png");
+  background-repeat:no-repeat;
+  background-position: center center;
   font-family: Arial, Helvetica, sans-serif;
-  margin: 20% 20%;
+  margin: 20% 20%
 }
 
 p, h1, h3, h4, h5, h6, ul, li {
